<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/coffee1"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/q1" />

        <CheckBox
            android:id="@+id/gallstones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_24"
            android:text="@string/q1_a"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/diabetes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_24"
            android:text="@string/q1_b"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/heart_attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_24"
            android:text="@string/q1_c"
            android:textSize="16sp" />


        <TextView
            style="@style/HeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/q2" />

        <EditText
            android:id="@+id/edit_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text"
            android:inputType="textMultiLine" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"

            android:orientation="vertical">

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3" />

            <RadioButton
                android:id="@+id/q3_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_1"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q3_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_2"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4" />

            <RadioButton
                android:id="@+id/q4_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_1"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q4_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_2"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5" />

            <RadioButton
                android:id="@+id/q5_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_1"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q5_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_2"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6" />

            <RadioButton
                android:id="@+id/q6_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6_1"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q6_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6_2"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:onClick="submitQuiz"
            android:text="@string/score" />


    </LinearLayout>
</ScrollView>
